# agentgeoscore

./: .gitignore  README.md
.agents/skills/deploy/: SKILL.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  fetcher.py  fixes.py  llms_suggest.py  main.py  models.py  og.py  scoring.py  targets.py
backend/app/assets/fonts/: README.md
backend/app/probes/: __init__.py  _util.py  brave.py  duck_ai.py  gemini.py  groq.py  mistral.py  queries.py
backend/app/scanners/: __init__.py  agent_access.py  content_clarity.py  discoverability.py  structured_data.py
backend/tests/: test_content_clarity.py  test_groq.py  test_llms_suggest.py  test_og_share.py  test_probe_util.py  test_probes.py  test_queries.py  test_robots.py  test_scan_integration.py  test_scoring.py  test_structured_data.py  test_targets.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  brand.ts  fonts.css  history.ts  index.css  types.ts
frontend/src/components/: CategoryBreakdown.tsx  FixList.tsx  LLMSTxtCard.tsx  RadarChart.tsx  RecentScans.tsx  ScanningIndicator.tsx  ScoreCard.tsx  URLInput.tsx
frontend/src/hooks/: useCountUp.ts
frontend/src/pages/: HomePage.tsx  NotFoundPage.tsx  ReportPage.tsx
frontend/src/test/: FixList.test.tsx  LLMSTxtCard.test.tsx  RadarChart.test.tsx  ScoreCard.test.tsx  api.test.ts  history.test.ts
frontend/tests/e2e/: a11y.spec.ts  chrome.spec.ts  keyboard.spec.ts  navigation.spec.ts  share.spec.ts  smoke-bands.spec.ts  (+3 more)
(+2 files in other folders)
